Heavy changes to the server code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-<p>A <a href="https://phaser.io/">phaser.io,</a> <a href="http://socket.io/">socket.io,</a> and <a href="https://nodejs.org/">node.js</a> with <a href="http://expressjs.com/">express</a> project by vez. Source code soon...</p>
+<p>A <a href="https://phaser.io/">phaser.io,</a> <a href="http://socket.io/">socket.io,</a> and <a href="https://nodejs.org/">node.js</a> with <a href="http://expressjs.com/">express</a> project by vez.</p>
 <script src="socket.io/socket.io.js"></script>
 <script type="text/javascript">
 
